data/src/objects/MicroTriggerAction__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApexClass__c</fullName>
        <description>Name of the Apex Class</description>
        <label>Apex Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Action</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MicroTrigger__c</fullName>
        <label>MicroTrigger</label>
        <referenceTo>MicroTrigger__mdt</referenceTo>
        <relationshipLabel>MicroTrigger Actions</relationshipLabel>
        <relationshipName>MicroTriggerActions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>OrderOfExecution__c</fullName>
        <label>Order Of Execution</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MicroTrigger Action</label>
    <pluralLabel>MicroTrigger Actions</pluralLabel>
</CustomObject>